[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "thinking-machine"
version = "0.0.9"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
]
description = "A Machine that does thinking."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["thinking-machine"]

dependencies = [
    "electroid >= 0.0.16",
    "opehaina >= 0.0.1",
    "PyGithub >= 2.6.0",
    "PyYAML >= 6.0.1",
    "urllib3 >= 2.0.4",
    "requests >= 2.32.3",
    "click >= 8.3.0"
]

[project.scripts]
thinking-machine = "thinking_machine.cli:run"

[project.urls]
"Homepage" = "https://github.com/machina-ratiocinatrix/thinking-machine"
"Bug Tracker" = "https://github.com/machina-ratiocinatrix/thinking-machine/issues"