[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "thinking-machine"
version = "0.0.19"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "A Machine that thinks."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords = ["thinking-machine"]
dependencies = [
    "pyyaml == 6.0.3",
    "click == 8.3.1"
]

[project.scripts]
thinking-machine = "thinking_machine.cli:run"

[project.urls]
"Homepage" = "https://github.com/machina-ratiocinatrix/thinking-machine"

[dependency-groups]
dev = ["pytest>=8.0.0"]